[tool.poetry]
name = "jensnylander"
version = "0.1.0"
description = "jensnylander"
authors = ["Avinash Ranganath <nash911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
#torch = ">=2.0"
numpy = "^1.26"
pandas = "^2.1.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
